Tuned gatsby-config.js, rewrote welcome msg, removed projects

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,7 @@
 <Text
-  children={`Hi.`}
+  children={`Hi`}
   sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
 />
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+I'm [Vova](/about), currently a team lead with 10+ years of software engineering experience. 
+Here I'm rambling about languages, technologies and other work-related things.
