Comment out about page

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -3,5 +3,5 @@
   sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }}
 />
 
-I'm [Vova](/about), currently a team lead with 10+ years of software engineering experience. 
+I'm Vova, currently a team lead with 10+ years of software engineering experience. 
 Here I'm rambling about languages, technologies and other work-related things.
