--- a/content/posts/complexity-matters/index.mdx
+++ b/content/posts/complexity-matters/index.mdx
@@ -27,7 +27,7 @@ Ok, now it's time for a small exercise.
 It's the year 2015. Space X just launched and landed their rocket for the first time, and you just finished watching the stream. A product owner comes
 to your desk and asks you to add a simple feature to the service you're working on: implement a request which takes a list of users, and returns all the
 recent posts for each of the users. Quicker, quicker, this feature is expected to be in production _yesterday_! No time to think, and you already have two functions
-in your codebase which are fetching similar data, you can combine them easily, so in 10 minutes you're pushing to master something like this:
+in your codebase which are fetching similar data, you can combine them easily, so in 10 minutes you're pushing to main something like this:
 
 ```python
 # you had this function somewhere
@@ -71,7 +71,7 @@ The year 2021. The service is still up and running, it's still growing, it has c
 No one from the original authors is working in the company, no one in the new team knows all the corners of the service.
 
 But what they do know is that periodically at 4 am alerts are waking them up because of the amount of 500 errors returned by the service.
-They have dashboards and see some spikes in requests to the service, ending up in some enormous 400,000 queries-per-second numbers on the database size.
+They have dashboards and see some spikes in requests to the service, ending up in some enormous 400,000 queries-per-second numbers on the database side.
 Some days number is a bit lower (350,000-370,000) and there are no alerts, but roughly once per month, someone faces this issue.
 Ok, they even know the reason for that -- 4 am is a very good time to kick off some background processes as there is _almost_ no user load.
 So other services and scripts are fetching some data for their needs.
@@ -80,7 +80,7 @@ They've checked the most popular request at 4 am (_~1 million_ hits per minute) 
 They are starting to think that maybe the database is needed to be sharded. A cache is already here and it's quite big.
 
 One day someone almost randomly looks at _the 9th popular_ request (with _just 40,000_ hits per minute)... and finds out our good old `process_get_posts` function...
-WHAT?! Ok, let's calculate: the background script (quite old as well, no one looked at it either) is doing some chunking when calling `get_posts`.
+WHAT?! Ok, let's calculate: the background script (quite old as well, no one looked at it in ages) is doing some chunking when calling `get_posts`.
 So no more than 1,000 UUIDs per request. But then each UUID can have 100 posts. So we generate `1,000 * (1 + 100)` queries to the database for a single request to the service!
 Yes, queries are not parallel, but each of them is processed within 2 milliseconds, so it's easily hundreds of queries-per-second. And having 40k of them...
 `40,000 RPS / 60s * (1s / 2ms) = 333,333 QPS`. Wow. They spend some more time on the code, modified it to fetch everything in a single query:
@@ -108,4 +108,4 @@ of queries as they exhausted the database's worker-thread-pool. After the fix, t
 What can I say? Know your codebase. Invest into the tooling to observe your system: have better metrics and logs, dashboards and alerts.
 Know your bottlenecks. Remember about complexity. And periodically revisit the system you have: sometimes you will cut some corners,
 but you will most likely need to address these issues in a long run. I'm pretty sure that the original authors of this code know everything I've mentioned here,
-but as it was not an issue from the beginning this code was alive for quite a decent amount of time.
+but as it was not an issue from the beginning this code was alive for years and years.
